2006-08-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/java/util/VMTimeZone.java:
	Removed.

	* Makefile.am (BUILD_ENVIRONMENT-make): Added classpath java-util 
	to KAFFELIBRARYPATH.

	* kaffe/kaffevm/Makefile.am: Added TimeZone.c.

	* libraries/clib/native/Makefile.am: (UTIL_SRCS) Removed.
	(libjavalang_la_SOURCES) Removed UTIL_SRCS.

2006-08-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/Makefile.am (TEST_SRCS): Removed.
	(libjavalang_la_SOURCES) Removed TEST_SRCS.

	* libraries/clib/native/TestNative.c: Removed unused file.

2006-08-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am:
	Added java_lang_reflect_VMArray.c, Constructor.c,
	Field.c and Method.c to the library.

	* libraries/clib/native/Makefile.am:
	Removed java_lang_reflect_VMArray.c, Constructor.c,
        Field.c and Method.c from the library.
	
2006-08-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am:
	Added java_lang_ref_Reference.c to the library.

	* libraries/clib/native/Makefile.am:
	Removed java_lang_ref_Reference.c from the library.

2006-08-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/awt/xynth/Makefile.in:
	Added missing file.

2006-08-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am:
	Added AccessController.c to the library.

	* libraries/clib/native/Makefile.am:
	Removed AccessController.c from the library.

2006-08-24  Dalibor Topic  <robilad@kaffe.org>

        Switched io libraries to GNU Classpath's version.

	* libraries/clib/io/Makefile.am,
	libraries/clib/io/Makefile.in,
	libraries/clib/io/java_io_VMObjectInputStream.c,
	libraries/clib/io/java_io_VMObjectStreamClass.c:
	Removed.

        * Makefile.am (BUILD_ENVIRONMENT-make): Set KAFFELIBRARYPATH to GNU Classpath's
        java-io native library.

        * configure.ac (JAVA_LIBS) Removed kaffe's native io library.
        Don't output Makefile for Kaffe's native io libraries.
