@@ -1,3 +1,13 @@
+2006-08-27  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/Makefile.am: Added Class.c, ClassLoader.c,
+	Object.c, Runtime.c, VMRuntime.c, String.c, System.c, 
+	Thread.c and Throwable.c.
+
+	* libraries/clib/native/Makefile.am: Removed Class.c, ClassLoader.c,
+        Object.c, Runtime.c, VMRuntime.c, String.c, System.c,
+        Thread.c and Throwable.c.
+
 2006-08-26  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/vmspecific/java/util/VMTimeZone.java:
